# ssm-env

./: .gitignore  .projenrc.js  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: datadog-software-composition-analysis.yml  projen-synth.yml  pull-request-lint.yml  release-please.yml  rust-build-release-artifacts.yml  rust-cross-build.yml  rust-release.yml  upgrade-nodejs-dependencies.yml
.projen/: files.json
src/: cli.rs  commands.rs  errors.rs  main.rs  ssm.rs
