[package]
authors = [ "Gabriel Plassard <2485407+gplassard@users.noreply.github.com>" ]
version = "0.3.4"
edition = "2021"
name = "ssm-env"

[dependencies]
aws-sdk-ssm = "1.91"
log = "0.4"
env_logger = "0.11"
tempfile = "3.21"

[dependencies.aws-config]
version = "1.8"
features = [ "behavior-version-latest" ]

[dependencies.tokio]
version = "1.47"
features = [ "full" ]

[dependencies.clap]
version = "4.5"
features = [ "derive" ]
